# Autonomous-Earthquake-SAR-Drone

./: CMakeLists.txt  README.md  package.xml  plugin.xml
cfg/: FrontierDetection.cfg
config/: rosconsole.config
data/: detected_corners.txt  geofence.yaml
rviz_config/: trajectory_rescue.rviz
rviz_plugins/: __init__.py  plugin_description.xml  trajectory_panel.py
src/: altitude_scanner.py  building_detector.py  costmap_build.cpp  create_path.cpp  firefly_trajectory.cpp  follow_path.cpp  frontier_detection.cpp  fsm_states.py  keyboard_control.cpp  move_corner_build.cpp  pop_cordinate.py  rescue_data_logger.py  rescue_web.py  smart_building_selector.py  turn_360.cpp  up.cpp
